GNOME Bugzilla – Bug 749304
srtpenc: fix over unlocking
Last modified: 2015-05-13 11:34:55 UTC
Created attachment 303302 [details] [review] 0001-srtpenc-fix-over-unlocking.patch If gst_srtp_enc_create_session gets some error we are unlocking twice.
Thanks, pushed - plus an additional patch to fix the return values. commit 9adefac59b262f7ec44ec1ececa00a2c69dd98e2 Author: Tim-Philipp Müller <tim@centricular.com> Date: Wed May 13 12:31:44 2015 +0100 srtpenc: fix failure return values from create_session() create_session() returns an err_status_t with err_status_ok=0 and err_status_fail=1, so returning TRUE/FALSE is not quite right. https://bugzilla.gnome.org/show_bug.cgi?id=749304 commit 481e1f76e84e272fee49c9c8ee8d1af28f916c00 Author: Miguel París Díaz <mparisdiaz@gmail.com> Date: Wed May 13 13:14:14 2015 +0200 srtpenc: fix over unlocking Called should call function with lock, and is also responsible for unlocking it later. https://bugzilla.gnome.org/show_bug.cgi?id=749304